[package]
name = "sorted_merkle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
base64 = "0.13.0"
bytes32 = "0.1.3"
hex = "0.4.3"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
